<resources>
    <string name="app_name">GPS Map</string>
    <string name="navigation">Navigation</string>
    <string name="trails">Trails</string>
    <string name="settings">Settings</string>
    <string name="main_settings">Main settings</string>
    <string name="time_update">Time update</string>
    <string name="time_update_summary">Location time update</string>
    <string name="color_settings">Color settings</string>
    <string name="color">Color</string>
    <string name="color_summary">Choice color navigation line</string>
    <string name="connect_gps">GPS not found</string>
    <string name="gps_summary">Do you want connect GPS?</string>
    <string name="gps_button_positive">Yes</string>
    <string name="gps_button_negative">No</string>
    <string name="location_request_not_enable">You must provide permission to use the location</string>
    <string name="walking_service_enable">Record trail enable</string>
    <string name="dialog_save_title">Save this trail?</string>
    <string name="button_save_dialog">Save</string>
    <string name="button_cancel_dialog">Cancel</string>


</resources>