<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation"
        android:title="@string/navigation"
        android:icon="@drawable/ic_navigation"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        />

    <item
        android:id="@+id/trails"
        android:title="@string/trails"
        android:icon="@drawable/ic_trail"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"
        />

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"
        android:orderInCategory="3"
        />
</menu>